[package]
name = "mine-stats"
version = "0.2.4"
edition = "2021"
homepage = "https://github.com/light4/mine-stats"
authors = ["Light Ning <root@i01.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12"
axum = { version = "0.6", features = ["headers", "http2", "macros"] }
bincode = "2.0.0-rc.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
color-eyre = "0.6"
graphql_client = "0.12"
hyper = "0.14"
kdl = "4.6"
nix = "0.26"
once_cell = "1.17"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.13"
tokio = { version = "1.26", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "process",
    "rt",
    "signal",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 4
strip = "debuginfo"
# split-debuginfo = 'packed'    # https://doc.rust-lang.org/rustc/codegen-options/index.html#split-debuginfo
